--- a/redirects.yaml
+++ b/redirects.yaml
@@ -403,6 +403,13 @@ ajhalili2006wiki:
   ca: 'Sectigo'
   hsts: 'strict'
   disable_event: true
+fanpediawiki:
+  url: 'fanpedia.miraheze.org'
+  redirect: 'fanonpedia.com'
+  sslname: 'wildcard.miraheze.org-2020-2'
+  ca: 'Sectigo'
+  hsts: 'strict'
+  disable_event: true
 
 # *.miraheze.org to *.miraheze.org wiki redirects
 wwwredirect:
