Re-add wiki.nmc.games

--- a/certs.yaml
+++ b/certs.yaml
@@ -1704,6 +1704,10 @@ bristolstudenthousingcooporg:
   url: 'bristolstudenthousingcoop.org'
   ca: 'LetsEncrypt'
   disable_event: false
+wikinmcgames:
+  url: 'wiki.nmc.games'
+  ca: 'LetsEncrypt'
+  disable_event: false
 wikipwaadiaworks:
   url: 'wikipwaadia.works'
   ca: 'LetsEncrypt'
