--- a/redirects.yaml
+++ b/redirects.yaml
@@ -245,7 +245,7 @@ wwwglitchcity:
   disable_event: true
 pyramidgameswiki:
   url: 'www.pyramidgames.wiki'
-  redirect: 'pyramidgames.wiki'
+  redirect: 'looneypyramids.wiki'
   sslname: 'pyramidgames.wiki'
   ca: 'LetsEncrypt'
   disable_event: true
@@ -261,7 +261,7 @@ pastportwiki:
   sslname: 'pastport.org'
   ca: 'LetsEncrypt'
   disable_event: true
-pyramidgameswiki:
+looneypyramidgameswiki:
   url: 'pyramidgames.wiki'
   redirect: 'looneypyramids.wiki'
   sslname: 'pyramidgames.wiki'
