Redirect recaptime.miraheze.org to squad.lorebooks.eu.org
See https://mau.dev/RecapTime/squad/issue-tracker/-/issues/7#note_542 for details.

--- a/redirects.yaml
+++ b/redirects.yaml
@@ -325,7 +325,7 @@ lgbtawiki:
   disable_event: true
 recaptimewiki:
   url: 'recaptime.miraheze.org'
-  redirect: 'wiki.recaptime.eu.org'
+  redirect: 'squad.lorebooks.eu.org'
   sslname: 'wildcard.miraheze.org-2020-2'
   ca: 'Sectigo'
   hsts: 'strict'
