--- a/redirects.yaml
+++ b/redirects.yaml
@@ -440,7 +440,7 @@ wikiyri:
   redirect: 'en.wikiyri.org'
   sslname: 'wikiyri.org'
   ca: 'LetsEncrypt'
-  disable_event: true
+  disable_event: false
 
 # *.miraheze.org to *.miraheze.org wiki redirects
 wwwredirect:
