--- a/redirects.yaml
+++ b/redirects.yaml
@@ -435,6 +435,12 @@ avidwikimh:
   ca: 'Sectigo'
   hsts: 'strict'
   disable_event: true
+wikiyriorg:
+  url: 'wikiyri.org'
+  redirect: 'en.wikiyri.org'
+  sslname: 'wikiyri.org'
+  ca: 'LetsEncrypt'
+  disable_event: false
 
 # *.miraheze.org to *.miraheze.org wiki redirects
 wwwredirect:
