Enable events for miraheze.com
We don't have it as a wildcard cert so enable events

--- a/redirects.yaml
+++ b/redirects.yaml
@@ -27,7 +27,7 @@ mirahezecom:
   redirect: 'meta.miraheze.org'
   sslname: 'miraheze.com'
   ca: 'LetsEncrypt'
-  disable_event: true
+  disable_event: false
 wwwsdiyinfo:
   url: 'www.sdiy.info'
   redirect: 'sdiy.info'
