Disable projectpatternscom event
We already do this in certs.yaml, no need to duplicate the process.

--- a/redirects.yaml
+++ b/redirects.yaml
@@ -188,7 +188,7 @@ projectpatternscom:
   redirect: 'project-patterns.com'
   sslname: 'project-patterns.com'
   ca: 'LetsEncrypt'
-  disable_event: false
+  disable_event: true
 lgbtqiawiki:
   url: 'lgbtqia.wiki'
   redirect: 'www.lgbtqia.wiki'
