Revert "Update certs.yaml"
This reverts commit de29e06cc7964ec6ec8a18f38b98d0a23aaa1a94.

--- a/certs.yaml
+++ b/certs.yaml
@@ -1208,6 +1208,10 @@ resourcesafricanvisionorg:
   url: 'resources.africanvision.org'
   ca: 'LetsEncrypt'
   disable_event: false
+enclockupwikiorg:
+  url: 'en.clockupwiki.org'
+  ca: 'LetsEncrypt'
+  disable_event: false
 wikizahirame:
   url: 'wiki.zahira.me'
   ca: 'LetsEncrypt'
