Redirect tintinpedia.miraheze.org to tintinpedia.fr (#728)
Bug: T11238

--- a/redirects.yaml
+++ b/redirects.yaml
@@ -416,6 +416,13 @@ wwwburnoutwiki:
   sslname: 'burnout.wiki'
   ca: 'LetsEncrypt'
   disable_event: true
+tintinpediawiki_redirect:
+  url: 'tintinpedia.miraheze.org'
+  redirect: 'tintinpedia.fr'
+  sslname: 'wildcard.miraheze.org-2020-2'
+  ca: 'Sectigo'
+  hsts: 'strict'
+  disable_event: true
 
 # *.miraheze.org to *.miraheze.org wiki redirects
 wwwredirect:
