add luxuryelevatorwiki redirect

--- a/redirects.yaml
+++ b/redirects.yaml
@@ -438,6 +438,13 @@ pandorastale:
   ca: 'Sectigo'
   hsts: 'strict'
   disable_event: true
+luxuryelevatorwiki:
+  url: 'luxuryelevator.miraheze.org'
+  redirect: 'wiki.theluxuryelevator.com'
+  sslname: 'wildcard.miraheze.org-2020-2'
+  ca: 'Sectigo'
+  hsts: 'strict'
+  disable_event: true
 
 # *.miraheze.org to *.miraheze.org wiki redirects
 wwwredirect:
