japanesefeaturephoneswiki->keitaiwikiwiki redirect

--- a/redirects.yaml
+++ b/redirects.yaml
@@ -499,6 +499,13 @@ thelangyalist_redirect:
   ca: 'Sectigo'
   hsts: 'strict'
   disable_event: true
+japanesefeaturephones_redirect:
+  url: 'japanesefeaturephones.miraheze.org'
+  redirect: 'keitaiwiki.miraheze.org'
+  sslname: 'wildcard.miraheze.org-2020-2'
+  ca: 'Sectigo'
+  hsts: 'strict'
+  disable_event: true
 
 # orain.org to miraheze.org wiki redirects
 allthetropesorain:
