--- a/redirects.yaml
+++ b/redirects.yaml
@@ -419,6 +419,13 @@ luxuryelevatorwiki:
   ca: 'Sectigo'
   hsts: 'strict'
   disable_event: true
+removededmsongswiki:
+  url: 'removededmsongs.miraheze.org'
+  redirect: 'removededm.com'
+  sslname: 'wildcard.miraheze.org-2020-2'
+  ca: 'Sectigo'
+  hsts: 'strict'
+  disable_event: true
 
 # *.miraheze.org to *.miraheze.org wiki redirects
 wwwredirect:
