--- a/certs.yaml
+++ b/certs.yaml
@@ -14,6 +14,12 @@ wikitidenet:
   sslname: 'wikitide.net'
   ca: 'LetsEncrypt'
   disable_event: true
+wikitideorg:
+  url: 'wikitide.org'
+  additional_domain: '*.wikitide.org'
+  sslname: 'wikitide.org'
+  ca: 'LetsEncrypt'
+  disable_event: true
 antiguabarbudacalypso:
   url: 'antiguabarbudacalypso.com'
   ca: 'LetsEncrypt'
