Add polandballwiki.com redirect

--- a/redirects.yaml
+++ b/redirects.yaml
@@ -255,6 +255,12 @@ wwwmwcosmoscom:
   sslname: 'mwcosmos.com'
   ca: 'LetsEncrypt'
   disable_event: false
+wwwpolandballwikicom:
+  url: 'www.polandballwiki.com'
+  redirect: 'polandballwiki.com'
+  sslname: 'polandballwiki.com'
+  ca: 'LetsEncrypt'
+  disable_event: true
 
 # *.miraheze.org to wiki custom domains redirects
 allthetropeswiki:
