--- a/redirects.yaml
+++ b/redirects.yaml
@@ -4,7 +4,7 @@ mirahezewiki:
   url: 'miraheze.wiki'
   redirect: 'meta.miraheze.org'
   path_redirects:
-    ^/br: 'phabricator.miraheze.org/maniphest/task/edit/form/20/'
+    ^/br: 'issue-tracker.miraheze.org/maniphest/task/edit/form/20/'
     ^/Fundraiser: 'meta.miraheze.org/wiki/Special:MyLanguage/Fundraiser'
   sslname: 'miraheze.wiki'
   ca: 'LetsEncrypt'
