Add Rosetta Code redirect

--- a/redirects.yaml
+++ b/redirects.yaml
@@ -274,6 +274,12 @@ wwwlgbtqiawiki:
   sslname: 'lgbtqia.wiki'
   ca: 'LetsEncrypt'
   disable_event: true
+wwwrosettacodeorg:
+  url: 'www.rosettacode.org'
+  redirect: 'rosettacode.org'
+  sslname: 'rosettacode.org'
+  ca: 'LetsEncrypt'
+  disable_event: true
 
 # *.miraheze.org to wiki custom domains redirects
 allthetropeswiki:
