--- a/redirects.yaml
+++ b/redirects.yaml
@@ -1,4 +1,16 @@
 ---
+# wiki.surf redirect
+wikisurf:
+  url: 'wiki.surf'
+  additional_domain: 'www.wiki.surf'
+  redirect: 'meta.miraheze.org/wiki/Special:UrlRedirector'
+  path_redirects:
+    ^/br: 'issue-tracker.miraheze.org/maniphest/task/edit/form/20/'
+    ^/Fundraiser: 'meta.miraheze.org/wiki/Special:MyLanguage/Fundraiser'
+  sslname: 'wiki.surf'
+  ca: 'LetsEncrypt'
+  disable_event: true
+
 # miraheze.wiki redirects
 mirahezewiki:
   url: 'miraheze.wiki'
@@ -16,15 +28,6 @@ wikitideredirect:
   additional_domain: 'www.wikitide.org'
   redirect: 'miraheze.org'
   sslname: 'wikitide.org'
-  ca: 'LetsEncrypt'
-  disable_event: true
-
-# wiki.surf redirect
-wikisurfredirect:
-  url: 'wiki.surf'
-  additional_domain: 'www.wiki.surf'
-  redirect: 'meta.miraheze.org/wiki/Special:UrlRedirector'
-  sslname: 'wiki.surf'
   ca: 'LetsEncrypt'
   disable_event: true
 
