--- a/certs.yaml
+++ b/certs.yaml
@@ -8351,3 +8351,7 @@ zomvillespixiemetacom:
   ca: LetsEncrypt
   disable_event: false
   url: zomvilles.pixiemeta.com
+spiceandwolfwiki:
+  ca: LetsEncrypt
+  disable_event: false
+  url: spiceandwolf.wiki
