--- a/redirects.yaml
+++ b/redirects.yaml
@@ -295,6 +295,11 @@ wwwthegreatwaruk:
   sslname: 'thegreatwar.uk'
   ca: 'LetsEncrypt'
   disable_event: true
+wwwrippaversewikicom:
+  url: 'www.rippaversewiki.com'
+  redirect: 'rippaversewiki.com'
+  sslname: 'rippaversewiki.com'
+  ca: 'LetsEncrypt'
 
 # *.miraheze.org/*.wikitide.org to wiki custom domains redirects
 mhdcwiki:
@@ -521,7 +526,12 @@ nintendowikiwiki_forcedredit:
   ca: 'Sectigo'
   hsts: 'strict'
   disable_event: true
-# *.wikitide.org to wiki custom domains redirects
+rippaversewiki:
+  url: 'rippaverse.wikitide.org'
+  redirect: 'rippaversewiki.com'
+  sslname: 'wikitide.org'
+  ca: 'LetsEncrypt'
+  disable_event: true
 polcompball_wikitide_redirect:
   url: 'polcompball.wikitide.org'
   redirect: 'polcompball.wiki'
