--- a/redirects.yaml
+++ b/redirects.yaml
@@ -526,6 +526,13 @@ polcompball_wikitide_redirect:
   sslname: 'wikitide.org'
   ca: 'LetsEncrypt'
   disable_event: true
+minigamemadnesswiki:
+  url: 'minigamemadness.miraheze.org'
+  redirect: 'wiki.minigamemadness.net'
+  sslname: 'wildcard.miraheze.org-2020-2'
+  ca: 'Sectigo'
+  hsts: 'strict'
+  disable_event: true
 
 # *.miraheze.org to *.miraheze.org wiki redirects
 wwwredirect:
