add meijinversus.miraheze.org redirect

--- a/redirects.yaml
+++ b/redirects.yaml
@@ -533,6 +533,13 @@ minigamemadnesswiki:
   ca: 'Sectigo'
   hsts: 'strict'
   disable_event: true
+meijinversuswiki:
+  url: 'meijinversus.miraheze.org'
+  redirect: 'meijinversus.com'
+  sslname: 'wildcard.miraheze.org-2020-2'
+  ca: 'Sectigo'
+  hsts: 'strict'
+  disable_event: true
 
 # *.miraheze.org to *.miraheze.org wiki redirects
 wwwredirect:
