T12311: Redirect gimkit.miraheze.org to gimkit.wiki

--- a/redirects.yaml
+++ b/redirects.yaml
@@ -547,6 +547,13 @@ urbanshadewiki:
   ca: 'Sectigo'
   hsts: 'strict'
   disable_event: true
+gimkitwikiredirect:
+  url: 'gimkit.miraheze.org'
+  redirect: 'gimkit.wiki'
+  sslname: 'wildcard.miraheze.org-2020-2'
+  ca: 'Sectigo'
+  hsts: 'strict'
+  disable_event: true
 
 # *.miraheze.org to *.miraheze.org wiki redirects
 wwwredirect:
