--- a/redirects.yaml
+++ b/redirects.yaml
@@ -573,6 +573,13 @@ junxionswikiredirect:
   ca: 'Sectigo'
   hsts: 'strict'
   disable_event: true
+lostmediaruwikiredirect:
+  url: 'lostmediaru.miraheze.org'
+  redirect: 'lostmediawiki.ru'
+  sslname: 'wildcard.miraheze.org-2020-2'
+  ca: 'Sectigo'
+  hsts: 'strict'
+  disable_event: true
 
 # *.miraheze.org to *.miraheze.org wiki redirects
 wwwredirect:
