--- a/redirects.yaml
+++ b/redirects.yaml
@@ -580,6 +580,13 @@ lostmediaruwikiredirect:
   ca: 'Sectigo'
   hsts: 'strict'
   disable_event: true
+tgtdwiki:
+  url: 'tgtd.miraheze.org'
+  redirect: 'wiki.tgtdrblx.com'
+  sslname: 'wildcard.miraheze.org-2020-2'
+  ca: 'Sectigo'
+  hsts: 'strict'
+  disable_event: true
 
 # *.miraheze.org to *.miraheze.org wiki redirects
 wwwredirect:
