--- a/redirects.yaml
+++ b/redirects.yaml
@@ -298,6 +298,11 @@ iewikiaurovilleorg:
   redirect: 'iewiki.purnamcommunity.in'
   sslname: 'iewiki.auroville.org'
   ca: 'LetsEncrypt'
+wwwchinafakewiki:
+  url: 'www.chinafake.wiki'
+  redirect: 'chinafake.wiki'
+  sslname: 'chinafake.wiki'
+  ca: 'LetsEncrypt'
 
 # *.miraheze.org/*.wikitide.org to wiki custom domains redirects
 mhdcwiki:
