--- a/certs.yaml
+++ b/certs.yaml
@@ -1545,7 +1545,8 @@ wwwdocumentopublicocombr:
   disable_event: false
 wikimahdiruizlinepm:
   url: 'wiki.mahdiruiz.line.pm'
-  ca: 'LetsEncrypt'
+  sslname: 'miraheze-origin-cert'
+  ca: 'Cloudflare'
   disable_event: false
 wikitdrwebtop:
   url: 'wiki.tdrweb.top'
