--- a/redirects.yaml
+++ b/redirects.yaml
@@ -550,6 +550,13 @@ tgtdwiki:
   ca: 'Sectigo'
   hsts: 'strict'
   disable_event: true
+kagagawiki:
+  url: 'kagaga.miraheze.org'
+  redirect: 'kagaga.jp'
+  sslname: 'miraheze-origin-cert'
+  ca: 'CloudFlare'
+  hsts: 'strict'
+  disable_event: true
 
 # *.miraheze.org to *.miraheze.org wiki redirects
 wwwredirect:
