+www.ssbuniverses.com

--- a/certs.yaml
+++ b/certs.yaml
@@ -2646,3 +2646,8 @@ weavefarerswiki:
   url: 'weavefarers.wiki'
   ca: 'LetsEncrypt'
   disable_event: false
+wwwssbuniversescom:
+  url: 'www.ssbuniverses.com'
+  sslname: 'miraheze-origin-cert'
+  ca: 'Cloudflare'
+  disable_event: false
