--- a/redirects.yaml
+++ b/redirects.yaml
@@ -557,6 +557,13 @@ kagagawiki:
   ca: 'CloudFlare'
   hsts: 'strict'
   disable_event: true
+ssbuniversewiki:
+  url: 'ssbuniverse.miraheze.org'
+  redirect: 'www.ssbuniverses.com'
+  sslname: 'miraheze-origin-cert'
+  ca: 'CloudFlare'
+  hsts: 'strict'
+  disable_event: true
 
 # *.miraheze.org to *.miraheze.org wiki redirects
 wwwredirect:
