--- a/redirects.yaml
+++ b/redirects.yaml
@@ -7,8 +7,8 @@ wikisurf:
   path_redirects:
     ^/br: 'issue-tracker.miraheze.org/maniphest/task/edit/form/20/'
     ^/Fundraiser: 'meta.miraheze.org/wiki/Special:MyLanguage/Fundraiser'
-  sslname: 'wiki.surf'
-  ca: 'LetsEncrypt'
+  sslname: 'miraheze-origin-cert'
+  ca: 'Cloudflare'
   disable_event: true
 
 # miraheze.wiki redirects
@@ -18,8 +18,8 @@ mirahezewiki:
   path_redirects:
     ^/br: 'issue-tracker.miraheze.org/maniphest/task/edit/form/20/'
     ^/Fundraiser: 'meta.miraheze.org/wiki/Special:MyLanguage/Fundraiser'
-  sslname: 'miraheze.wiki'
-  ca: 'LetsEncrypt'
+  sslname: 'miraheze-origin-cert'
+  ca: 'Cloudflare'
   disable_event: false
 
 # wikitide.org redirects
@@ -46,8 +46,8 @@ wwwpermanentfuturelab:
 mirahezecom:
   url: 'miraheze.com'
   redirect: 'meta.miraheze.org'
-  sslname: 'miraheze.com'
-  ca: 'LetsEncrypt'
+  sslname: 'miraheze-origin-cert'
+  ca: 'Cloudflare'
   disable_event: false
 wwwdariawiki:
   url: 'www.dariawiki.org'
