--- a/redirects.yaml
+++ b/redirects.yaml
@@ -7,9 +7,9 @@ wikisurf:
   path_redirects:
     ^/br: 'issue-tracker.miraheze.org/maniphest/task/edit/form/20/'
     ^/Fundraiser: 'meta.miraheze.org/wiki/Special:MyLanguage/Fundraiser'
-  sslname: 'wiki.surf'
-  ca: 'LetsEncrypt'
-  disable_event: true
+  ca: 'Cloudflare'
+  disable_event: false
+  sslname: miraheze-origin-cert
 
 # miraheze.wiki redirects
 mirahezewiki:
